--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
     <script src="p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
+    
+    <script language="javascript" type="text/javascript" src="box2d-html5.js"></script>
+    <script language="javascript" type="text/javascript" src="box2d-helper.js"></script>
+    
+    <script language="javascript" type="text/javascript" src="boundary.js"></script>
+    <script language="javascript" type="text/javascript" src="box.js"></script>
+    <script language="javascript" type="text/javascript" src="sketch.js"></script>
 
   </head>
   <body>
