--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
     
     <script language="javascript" type="text/javascript" src="box2d-html5.js"></script>
     <script language="javascript" type="text/javascript" src="box2d-helper.js"></script>
-    
-    <script language="javascript" type="text/javascript" src="boundary.js"></script>
-    <script language="javascript" type="text/javascript" src="box.js"></script>
-    <script language="javascript" type="text/javascript" src="sketch.js"></script>
 
   </head>
   <body>
-    <script src="sketch.js"></script>
     <script src="Rect.js"></script>
+    <script src="lineRect.js"></script>
+    <script src="sketch.js"></script>
   
 
 </body></html>
