--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html><html lang="en"><head>
     <script src="p5.js"></script>
     <script src="p5.sound.min.js"></script>
+    <script src="path/to/p5.sound.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
-    
+
     <script language="javascript" type="text/javascript" src="box2d-html5.js"></script>
     <script language="javascript" type="text/javascript" src="box2d-helper.js"></script>
 
@@ -12,6 +13,6 @@
     <script src="Rect.js"></script>
     <script src="lineRect.js"></script>
     <script src="sketch.js"></script>
-  
+
 
 </body></html>
