--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 
   </head>
   <body>
+    <h2> One Of Them </h2>
+    <p> 작가 : Jung Jun Hyeok </p>
+    <p> 작품에 대한 소개 어쩌구 저쩌구 </p>
+
     <script src="Rect.js"></script>
     <script src="lineRect.js"></script>
     <script src="sketch.js"></script>
+
 
 
 </body></html>
