--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <h2> One Of Them </h2>
     <p> 작가 : Jung Jun Hyeok </p>
-    <p> 작품에 대한 소개 어쩌구 저쩌구 </p>
+    <p> 두 객체의 관게속에서 발견 할 수 있는 것이다. </p>
 
     <script src="Rect.js"></script>
     <script src="lineRect.js"></script>
