fix canvas size

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <body>
     <h2> One Of Them </h2>
     <p> 작가 : Jung Jun Hyeok </p>
-    <p> 두 객체의 관게속에서 발견 할 수 있는 것이다. </p>
+    <p> 존재하지만 존재하지 않는 것들을 표현한다. </p>
+    <h5> 관람방식 : 마우스의 드래그 혹은 키보드의 스페이스바 </h5>
 
     <script src="Rect.js"></script>
     <script src="lineRect.js"></script>
