--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <h2> One Of Them </h2>
     <p> 작가 : Jung Jun Hyeok </p>
-    <p> 존재하지만 인식하고 있지 못하는 것을 표현한다. </p>
+    <p> 인간과 기계 사이의 기계의 정체성, 과 같이 두 객체 사이에 존재하지만 인식하고 있지 못하는 것을 표현한다. </p>
     <h6> 관람방식 : 마우스의 드래그 혹은 키보드의 스페이스바 </h6>
 
     <script src="Rect.js"></script>
